# Bomberman

./: .env.example  .gitignore  Client.py  Notes.md  cd.old  pyproject.toml
.github/workflows/: cd.yml  ci.yml
bomberman/common/: RoomState.py  ServerReference.py
bomberman/common/hub_rest_api/requests/: MatchMakingRequest.py
bomberman/common/hub_rest_api/responses/: DefaultResponse.py  MatchmakingResponse.py
bomberman/hub_server/: FailureDetector.py  HubPeer.py  HubServer.py  HubSocketHandler.py  HubState.py  PeerDiscoveryMonitor.py  Room.py  RoomHealthMonitor.py  RoomManager.py  __main__.py  start.py
bomberman/hub_server/gossip/: messages.proto  messages_pb2.py  messages_pb2.pyi
bomberman/hub_server/hublogging/: __init__.py
bomberman/hub_server/room_manager/: K8sRoomManager.py  LocalRoomManager.py  RoomManagerBase.py  __init__.py
bomberman/room_server/: GameEngine.py  GameInputHelper.py  GameStatePersistence.py  MockClient.py  NetworkUtils.py  RoomServer.py  __init__.py  level.txt  note.md
bomberman/room_server/gossip/: bomberman.proto  bomberman_pb2.py  bomberman_pb2.pyi
docker/: Dockerfile.hub  Dockerfile.room
k8s/base/: namespace.yaml
k8s/base/hub/: configmap.yaml  ingress.yaml  rbac.yaml  service.yaml  statefulset.yaml
k8s/base/nginx-tcp-proxy/: configmap.yaml  deployment.yaml  service.yaml  test-room.yaml
k8s/base/room/: room-server-test.yaml
k8s/scripts/: cleanup.sh  deploy-local.sh  exec-pod.sh  logs.sh  rebuild-deploy.sh  status.sh
notes/: architecture.md  roadmap.md
notes/diagrams/: sequence.puml
tests/unit/: test_sanity.py
tests/unit/common/: test_server_reference.py
tests/unit/hub_server/: test_failure_detector.py  test_hub_peer.py  test_hub_server.py  test_hub_socket_handler.py  test_hub_state.py  test_k8s_room_manager.py  test_local_room_manager.py  test_peer_discovery_monitor.py  test_room.py  test_room_health_monitor.py  test_room_manager.py  test_room_manager_base.py  test_room_manager_k8s.py  test_room_manager_local.py
tests/unit/room_server/: test_game_engine.py  test_game_input_helper.py  test_game_state_persistance.py  test_mock_client.py  test_network_utils.py  test_room_server.py
