[project]
name = "bomberman"
version = "1.0.0"
description = "Distributed Software System Project"
authors = [
    { name = "Enrico Ferraiolo" },
    { name = "Daniele Romanella" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = ["fastapi (>=0.128.0,<0.129.0)", "uvicorn (>=0.40.0,<0.41.0)"]

[project.scripts]
bomberman = "bomberman.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# --- Tool configurations ---

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=bomberman --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true